--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
   <groupId>com.stunstyle.imdb</groupId>
   <artifactId>imdb-finder</artifactId>
   <version>1.0-SNAPSHOT</version>
-
   <name>imdb-finder</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
@@ -33,14 +32,13 @@
       <version>1.1.1</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
+    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
     <dependency>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-shade-plugin</artifactId>
-      <version>3.1.1</version>
-
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+      <scope>compile</scope>
     </dependency>
-
 
   </dependencies>
 
